--- a/layoutparser.ipynb
+++ b/layoutparser.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import layoutparser as lp\n",
     "import fitz\n",
     "from PIL import Image\n",
+    "import numpy as np\n",
     "from utils import TextWord"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,25 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/lillemor/Documents/lgd-utils/venv/lib/python3.10/site-packages/torch/functional.py:539: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at /pytorch/aten/src/ATen/native/TensorShape.cpp:3637.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "layout = model.detect(image)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +93,7 @@
        "<PIL.Image.Image image mode=RGB size=596x842>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,27 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TextBlock(block=Rectangle(x_1=84.08171081542969, y_1=571.3047485351562, x_2=512.4382934570312, y_2=670.68310546875), text=None, id=None, type=Text, parent=None, next=None, score=0.9981558918952942)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "layout[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,42 +119,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# filter for text block\n",
     "text_blocks = lp.Layout([b for b in text_blocks \\\n",
-    "                   if not any(b.is_in(b_fig) for b_fig in figure_blocks)])"
+    "                   if not any(b.is_in(b_fig) for b_fig in figure_blocks)])\n",
+    "\n",
+    "# sort text blocks\n",
+    "\n",
+    "# convert image to  PIL image to numpy array\n",
+    "image_array = np.array(image)\n",
+    "h, w = image_array.shape[:2]\n",
+    "\n",
+    "left_interval = lp.Interval(0, w/2*1.05, axis='x').put_on_canvas(image)\n",
+    "\n",
+    "left_blocks = text_blocks.filter_by(left_interval, center=True)\n",
+    "left_blocks.sort(key = lambda b:b.coordinates[1], inplace=True)\n",
+    "# The b.coordinates[1] corresponds to the y coordinate of the region\n",
+    "# top-to-bottom reading order \n",
+    "right_blocks = lp.Layout([b for b in text_blocks if b not in left_blocks])\n",
+    "right_blocks.sort(key = lambda b:b.coordinates[1], inplace=True)\n",
+    "\n",
+    "# combine the two lists and add the index\n",
+    "text_blocks = lp.Layout([b.set(id = idx) for idx, b in enumerate(left_blocks + right_blocks)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(84.08171081542969, 571.3047485351562, 512.4382934570312, 670.68310546875)\n",
       "(139.8112335205078, 525.16357421875, 277.30877685546875, 536.8466796875)\n",
-      "TextBlock(block=Rectangle(x_1=84.08171081542969, y_1=571.3047485351562, x_2=512.4382934570312, y_2=670.68310546875), text=None, id=None, type=Text, parent=None, next=None, score=0.9981558918952942)\n"
+      "Geplantes Verrohrungsschema\n",
+      "(84.08171081542969, 571.3047485351562, 512.4382934570312, 670.68310546875)\n",
+      "Im Erfolgsfall, das heisst, wenn die angetroffene Transmissivität im Zielhorizont der ersten Bohrung ausreichend ist wird eine Doublettenanlage mit Injektions- und Extraktionsbohrung erstellt. Die zweite Bohrung wird dann als abgelenkte Bohrung vom selben Bohrplatz in den Zielhorizont Oberer Muschelkalk abgeteuft (d.h. vertikale Teufe ca. 1’250 m u.GOK). Der Bohransatzpunkt mit dem zweiten Bohrkeller ist ca. 10 m vom Ansatzpunkt der ersten Bohrung entfernt (vgl. Fig. 9 + Fig. 14). Für die endgültige Auswahl des nördlichen bzw. südlichen Ansatzpunktes für die 1. resp. 2. Bohrung sollen noch die Ergebnisse des Reprocessing der Seismik einfliessen.\n"
      ]
     }
    ],
    "source": [
-    "for block in text_blocks._blocks:\n",
-    "    print((block.coordinates)) #x0,y0,x1,y1\n",
-    "print(text_blocks._block[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "## get text from document in bbox of layoutparser block\n",
+    "def get_intersecting_words(block,all_words): \n",
+    "    intersecting_words=[]\n",
+    "    for word in all_words:\n",
+    "        if word.rect.intersects(block.coordinates):\n",
+    "            intersecting_words.append(word)\n",
+    "    return(intersecting_words)\n",
     "\n",
     "with fitz.open(pdf_path) as doc:\n",
     "    page=doc[13]\n",
@@ -191,106 +178,165 @@
     "                rect = fitz.Rect(x0, y0, x1, y1) * page.rotation_matrix\n",
     "                text_word = TextWord(rect=rect, text=word, page=13)\n",
     "                words.append(text_word)\n",
-    "    "
+    "    \n",
+    "    for block in text_blocks._blocks:\n",
+    "        print(block.coordinates) \n",
+    "        intersecting_words=get_intersecting_words(block=block,all_words=words)\n",
+    "        print(' '.join([word.text for word in intersecting_words]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Im Erfolgsfall, das heisst, wenn die angetroffene Transmissivität im Zielhorizont der ersten Bohrung ausreichend ist wird eine Doublettenanlage mit Injektions- und Extraktionsbohrung erstellt. Die zweite Bohrung wird dann als abgelenkte Bohrung vom selben Bohrplatz in den Zielhorizont Oberer Muschelkalk abgeteuft (d.h. vertikale Teufe ca. 1’250 m u.GOK). Der Bohransatzpunkt mit dem zweiten Bohrkeller ist ca. 10 m vom Ansatzpunkt der ersten Bohrung entfernt (vgl. Fig. 9 + Fig. 14). Für die endgültige Auswahl des nördlichen bzw. südlichen Ansatzpunktes für die 1. resp. 2. Bohrung sollen noch die Ergebnisse des Reprocessing der Seismik einfliessen.\n"
+      "(112.56195831298828, 88.81603240966797, 456.89208984375, 519.9451904296875)\n",
+      "6 ¼“ Endbohr- durchmesser Option: Koaxialsonde Steigrohr 4 ½“ - 3 ½\" ca. 60 m u. GOK ca. 750 m u. GOK 13 3/8\" Casing 17 ½“ Bohrdurchmesser 9 5/8\" Verrohrung 12 ¼\" Bohrdurchmesser GOK ca. 416 m ü.M 7\" Verrohrung 8 ½“ Bohrdurchmesser ca. 1’130 m u. GOK Unterer Malm Top Oberer Muschelkalk ET ca. 1’350 m u. GOK Option: 7“-Verrohrung bei ca. 650 m Schneiden Option: 5\"-Verrohrung + Liner Hanger OSM Permokarbon / Kristallin Quartär OMM / USM / Oberer Malm 'Brauner Dogger' / Opalinuston / Lias / Keuper Oberer- + Mittl. Muschelkalk / Buntsandstein 6 ¼\" Bohrdurchmesser\n"
      ]
     }
    ],
    "source": [
-    "text_blocks._blocks[0]\n",
-    "def get_intersecting_words(block,all_words):\n",
-    "    intersecting_words=[]\n",
-    "    for word in all_words:\n",
-    "        if word.rect.intersects(block.coordinates):\n",
-    "            intersecting_words.append(word)\n",
-    "    return(intersecting_words)\n",
-    "\n",
-    "intersecting_words=get_intersecting_words(block=text_blocks._blocks[0],all_words=words)\n",
-    "print(' '.join([word.text for word in intersecting_words]))"
+    "#text in figure block if exists\n",
+    "for block in figure_blocks._blocks:\n",
+    "        print(block.coordinates) \n",
+    "        intersecting_words=get_intersecting_words(block=block,all_words=words)\n",
+    "        print(' '.join([word.text for word in intersecting_words]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h, w = image.shape[:2]\n",
-    "\n",
-    "left_interval = lp.Interval(0, w/2*1.05, axis='x').put_on_canvas(image)\n",
-    "\n",
-    "left_blocks = text_blocks.filter_by(left_interval, center=True)\n",
-    "left_blocks.sort(key = lambda b:b.coordinates[1], inplace=True)\n",
-    "# The b.coordinates[1] corresponds to the y coordinate of the region\n",
-    "# sort based on that can simulate the top-to-bottom reading order \n",
-    "right_blocks = lp.Layout([b for b in text_blocks if b not in left_blocks])\n",
-    "right_blocks.sort(key = lambda b:b.coordinates[1], inplace=True)\n",
-    "\n",
-    "# And finally combine the two lists and add the index\n",
-    "text_blocks = lp.Layout([b.set(id = idx) for idx, b in enumerate(left_blocks + right_blocks)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ocr_agent = lp.TesseractAgent(languages='eng') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for block in text_blocks:\n",
-    "    segment_image = (block\n",
-    "                       .pad(left=5, right=5, top=5, bottom=5)\n",
-    "                       .crop_image(image))\n",
-    "        # add padding in each image segment can help\n",
-    "        # improve robustness \n",
-    "        \n",
-    "    text = ocr_agent.detect(segment_image)\n",
-    "    block.set(text=text, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Im Erfolgsfall, das heisst, wenn die angetroffene Transmissivitat im Zielhorizont der ersten\n",
-      "Bobrung ausreichend ist wird eine Doublettenanlage mit Injektions- und Extraktionsbohrung\n",
-      "erstellt. Die zweite Bohrung wird dann als abgelenkte Bohrung vom selben Bohrplatz in den\n",
-      "Zielhorizont Oberer Muschelkalk abgeteuft (dh. vertikale Teufe ca. 1250 m u.GOK). Der\n",
-      "Bobransatzpunkt mit dem zweiten Bohrkeller ist ca. 10 m vom Ansatzpunkt der ersten Bohrung\n",
-      "entfernt (vgl. Fig. 9 + Fig. 14). Fir die endgiltige Auswabl des ndrdlichen baw. stidlichen\n",
-      "Ansatzpunktes fiir die 1. resp. 2. Bobrung sollen noch die Ergebnisse des Reprocessing der\n",
-      "‘Gee cade,\n",
+      " \n",
+      "\n",
+      "Options\n",
+      "\n",
+      "Koaxilsonde\n",
+      "\n",
+      "Steiger 41\n",
+      "au\n",
+      "\n",
+      " \n",
+      "\n",
+      " \n",
+      "\n",
+      "Quartér\n",
+      "\n",
+      "comm\n",
+      "usM/\n",
+      "(Oberer Malm\n",
+      "\n",
+      " \n",
+      "\n",
+      "‘Brauner Dogger'/\n",
+      "\n",
+      " \n",
+      "\n",
+      " \n",
+      "\n",
+      "  \n",
+      "\n",
+      "‘Option: F-Varahrang ber\n",
+      "\n",
+      "(ca. 850 m Schneiden\n",
+      "\n",
+      " \n",
+      "\n",
+      " \n",
+      "\n",
+      "GOK ea. 416 m aN\n",
+      "\n",
+      "   \n",
+      "  \n",
+      " \n",
+      "\n",
+      "13.38\" Casing\n",
+      "17 ¥ Bohrdurehmesser\n",
+      "\n",
+      "‘ca.60mu. GOK\n",
+      "\n",
+      "9 518° Verrohrung\n",
+      "1214 Bohraurchmessor\n",
+      "\n",
+      " \n",
+      "\n",
+      "-\n",
+      "\n",
+      "ca. 750 mu. GOK\n",
+      "\n",
+      "7 Verrohrung\n",
+      "\n",
+      " \n",
+      "\n",
+      " \n",
+      "\n",
+      " \n",
+      "\n",
+      " \n",
+      "\n",
+      " \n",
+      "\n",
+      " \n",
+      "\n",
+      " \n",
+      "\n",
+      " \n",
+      "\n",
+      " \n",
+      "\n",
+      "Opatinuston/ 8 Bohrdurchmesser\n",
+      "Lae\n",
+      "‘ope ‘Option: S-Varamrang\n",
+      "‘Liner Hanger\n",
+      "‘Top Oberer 4\n",
+      "Muschekall ' ca.1'190mu.GOK\n",
+      "‘Oberer- + Hit f\n",
+      "imachonat / 614 Bohurchmesser\n",
+      "Buntsandstin ET ca. 1'350mu. GOK\n",
+      "[Permoxarbon\n",
+      "Kristin | [57 Endoh\n",
+      "\n",
+      " \n",
+      "\n",
+      " \n",
+      "\n",
+      " \n",
+      "\n",
+      " \n",
+      "\n",
+      " \n",
+      "\n",
+      "‘durchmeseer|\n",
+      "\n",
+      " \n",
       "\f\n",
       "---\n"
      ]
     }
    ],
    "source": [
-    "for txt in text_blocks.get_texts():\n",
+    "##OCR on image directly \n",
+    "ocr_agent = lp.TesseractAgent(languages='eng') \n",
+    "\n",
+    "for block in figure_blocks:\n",
+    "    segment_image = (block\n",
+    "                       .pad(left=5, right=5, top=5, bottom=5)\n",
+    "                       .crop_image(image_array))\n",
+    "        # add padding in each image segment can help improve robustness \n",
+    "        \n",
+    "    text = ocr_agent.detect(segment_image)\n",
+    "    block.set(text=text, inplace=True)\n",
+    "\n",
+    "for txt in figure_blocks.get_texts():\n",
     "    print(txt, end='\\n---\\n')"
    ]
   }
