--- a/asset_notebook.ipynb
+++ b/asset_notebook.ipynb
@@ -16,7 +16,7 @@
     "import io\n",
     "\n",
     "\n",
-    "from utils import create_text_lines\n",
+    "from text import create_text_lines\n",
     "from detect_language import detect_language_of_document\n",
     "from TOCExtractor import TOCExtractor\n",
     "import yaml\n",
