--- a/extract_images.ipynb
+++ b/extract_images.ipynb
@@ -2,49 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pymupdf\n",
+    "from PIL import Image\n",
+    "import io\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_dir = os.getcwd()\n",
+    "filename =\"Berichte_NAB 10-025_Kurzarbeitsprogram Geothermiebohrung Schlattingen.PDF\"\n",
+    "# filename = \"Berichte_NAB 12-051_Sedimentologie und Stratigraphie des ‘Brauner Doggers’ und seiner westlichen.PDF\"\n",
+    "# filename = \"Berichte_NAB 12-040_Untere Rahmengesteine des Opalinustons  Hydrogeologische Einheiten, Gesteinsparam.PDF\"\n",
+    "pdf_path = os.path.join(base_dir, \"data/NAB\", filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_dir = os.path.join(base_dir, \"data/test\", os.path.splitext(filename)[0])\n",
+    "os.makedirs(out_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Images extracted to: /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/1062\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "import fitz\n",
-    "from PIL import Image\n",
-    "import io\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "base_dir = os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdf_path = \"data/NAB/Berichte_NAB 10-025_Kurzarbeitsprogram Geothermiebohrung Schlattingen.PDF\"\n",
-    "#pdf_path= \"data/test/1062.pdf\"\n",
-    "out_dir = os.path.join(base_dir, \"data/test2\")\n",
-    "pdf_path= \"data/NAB/Berichte_NAB 12-040_Untere Rahmengesteine des Opalinustons  Hydrogeologische Einheiten, Gesteinsparam.PDF\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "##extract images from document\n",
     "\n",
-    "with fitz.Document(pdf_path) as doc:\n",
+    "with pymupdf.Document(pdf_path) as doc:\n",
     "    for page_number,page in enumerate(doc):\n",
     "        image_list = page.get_images()\n",
     "        drawing_list = page.get_drawings()\n",
@@ -56,31 +64,34 @@
     "            # get image extension\n",
     "            image_ext = base_image[\"ext\"]\n",
     "            \n",
-    "    # Create a PIL Image object from the image bytes\n",
     "            pil_image = Image.open(io.BytesIO(image_bytes))\n",
     "            # Save the image to disk\n",
-    "            image_path = os.path.join(base_dir, \"data/test2\",f\"image_{page_number}_{image_idx}.{image_ext}\")\n",
+    "            image_path = os.path.join(out_dir,f\"image_{page_number}_{image_idx}.{image_ext}\")\n",
     "            pil_image.save(image_path)\n",
+    "            \n",
+    "print(f\"Images extracted to: {out_dir}\")\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "##extract drawings from document\n",
     "\n",
-    "with fitz.open(pdf_path) as doc:\n",
-    "    for page_number,page in enumerate(doc):\n",
+    "with pymupdf.open(pdf_path) as doc:\n",
+    "    for page_index,page in enumerate(doc):\n",
+    "        page_number = page_index +1\n",
     "        drawings = page.get_drawings()\n",
     "        if drawings:\n",
-    "            out_doc = fitz.open()\n",
+    "            out_doc = pymupdf.open()\n",
     "            outpage = out_doc.new_page(width=page.rect.width, height=page.rect.height)\n",
     "            shape = outpage.new_shape() \n",
     "            for draw_idx,drawing in enumerate(drawings):\n",
+    "        \n",
     "                for item in drawing[\"items\"]:  # these are the draw commands\n",
     "                    if item[0] == \"l\":  # line\n",
     "                        shape.draw_line(item[1], item[2])\n",
@@ -92,15 +103,15 @@
     "                        shape.draw_bezier(item[1], item[2], item[3], item[4])\n",
     "                    else:\n",
     "                        raise ValueError(\"unhandled drawing\", item)\n",
+    "                        \n",
     "                shape.finish(\n",
     "                    fill=drawing.get(\"fill\", None),  # Fill color\n",
     "                    color=drawing.get(\"color\", None),  # Line color\n",
     "                    dashes=drawing.get(\"dashes\", None),  # Line dashing\n",
     "                )\n",
     "            shape.commit()\n",
-    "            out_drawing= os.path.join(base_dir, \"data/test2\", f\"drawing_page_{page_number}.pdf\")\n",
-    "            out_doc.save(out_drawing)\n",
-    "\n"
+    "            out_drawing= os.path.join(out_dir,f\"drawing_page_{page_number}.pdf\")\n",
+    "            out_doc.save(out_drawing)"
    ]
   }
  ],
