--- a/layoutparser.ipynb
+++ b/layoutparser.ipynb
@@ -10,7 +10,7 @@
     "import fitz\n",
     "from PIL import Image\n",
     "import numpy as np\n",
-    "from utils import TextWord"
+    "from text import TextWord"
    ]
   },
   {
